<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/enter_quest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_question"
        android:textSize="@dimen/plain_text_size" />
    <EditText
        android:id="@+id/answer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_answer"
        android:textSize="@dimen/plain_text_size" />
    <EditText
        android:id="@+id/answer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_answer"
        android:textSize="@dimen/plain_text_size" />
    <EditText
        android:id="@+id/answer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_answer"
        android:textSize="@dimen/plain_text_size" />
    <EditText
        android:id="@+id/answer4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_answer"
        android:textSize="@dimen/plain_text_size" />
    <EditText
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_category"
        android:textSize="@dimen/plain_text_size" />
    <EditText
        android:id="@+id/correct_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_correct_answer"
        android:textSize="@dimen/plain_text_size" />

    <Button
        style="@style/buttonStyle"
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_below="@id/button_save"
        android:ems="10"
        android:inputType="textPassword" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_below="@id/password"
        android:id="@+id/unlock"
        style="@style/buttonStyle"
        android:text="@string/unlock"
        />

</LinearLayout>