<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textColor="@color/plain_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_below_menu"
        android:text="@string/summary"
        android:textSize="@dimen/menu_label_size"
        android:id="@+id/summary"
        />
    <TextView
        android:textColor="@color/plain_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/summary"
        android:textSize="@dimen/plain_text_size"
        android:layout_marginTop="@dimen/margin_below_menu"
        android:id="@+id/correct_answer_label"
        android:text="@string/correct_answer_text"
        />
    <TextView
        android:textColor="@color/correct_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/summary"
        android:textSize="@dimen/plain_text_size"
        android:layout_toRightOf="@id/correct_answer_label"
        android:layout_marginTop="@dimen/margin_below_menu"
        android:id="@+id/correct_answer_number"
        />
    <TextView
        android:textColor="@color/plain_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/plain_text_size"
        android:layout_below="@+id/correct_answer_label"
        android:layout_marginTop="@dimen/margin_below_menu"
        android:id="@+id/bad_answer_label"
        android:text="@string/bad_answer_text"
        />
    <TextView
        android:textColor="@color/bad_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/plain_text_size"
        android:layout_below="@+id/correct_answer_label"
        android:layout_toRightOf="@id/bad_answer_label"
        android:layout_marginTop="@dimen/margin_below_menu"
        android:id="@+id/bad_answer_number"
        />
    <TextView
        android:textColor="@color/plain_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bad_answer_label"
        android:layout_marginTop="@dimen/margin_below_menu"
        android:textSize="@dimen/plain_text_size"
        android:id="@+id/points_label_summary"
        android:text="@string/earned_points"
        />
    <TextView
        android:textColor="@color/plain_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/plain_text_size"
        android:layout_below="@+id/bad_answer_label"
        android:layout_toRightOf="@id/points_label_summary"
        android:layout_marginTop="@dimen/margin_below_menu"
        android:id="@+id/earned_points_number"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_below="@id/earned_points_number"
        android:id="@+id/ng_button"
        style="@style/buttonStyle"
        android:text="@string/new_game"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_below="@id/ng_button"
        android:id="@+id/menu_button_summary"
        style="@style/buttonStyle"
        android:text="@string/menu_string"
        />


</RelativeLayout>